added instructions to readme

--- a/GI-Tract-Image-Segmentation.ipynb
+++ b/GI-Tract-Image-Segmentation.ipynb
@@ -1,16 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d898b94f",
+   "metadata": {},
+   "source": [
+    "# GI Tract Image Segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c983fdb3",
+   "metadata": {},
+   "source": [
+    "## Dataset Overview"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
+   "id": "be02f857",
    "metadata": {
-    "collapsed": true
+    "vscode": {
+     "languageId": "plaintext"
+    }
    },
    "outputs": [],
-   "source": [
-    "dsgfd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
