--- a/Healthy-and-Bleached-Corals-Image-Classification.ipynb
+++ b/Healthy-and-Bleached-Corals-Image-Classification.ipynb
@@ -18,38 +18,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "c9a029b8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T14:07:03.231515Z",
+     "start_time": "2024-10-29T14:06:55.249116Z"
+    }
+   },
+   "source": [
+    "!pip install numpy pillow"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (2.1.2)\n",
+      "Collecting numpy\n",
+      "  Downloading numpy-2.1.2-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
       "Collecting pillow\n",
-      "  Using cached pillow-11.0.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (9.1 kB)\n",
-      "Using cached pillow-11.0.0-cp312-cp312-manylinux_2_28_x86_64.whl (4.4 MB)\n",
-      "Installing collected packages: pillow\n",
-      "Successfully installed pillow-11.0.0\n"
+      "  Downloading pillow-11.0.0-cp312-cp312-win_amd64.whl.metadata (9.3 kB)\n",
+      "Downloading numpy-2.1.2-cp312-cp312-win_amd64.whl (12.6 MB)\n",
+      "   ---------------------------------------- 0.0/12.6 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 1.3/12.6 MB 9.5 MB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 2.4/12.6 MB 5.8 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 4.5/12.6 MB 7.1 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 5.8/12.6 MB 6.9 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 6.8/12.6 MB 7.0 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 8.4/12.6 MB 6.7 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 9.4/12.6 MB 6.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 10.7/12.6 MB 6.3 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.5/12.6 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.3/12.6 MB 5.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.6/12.6 MB 5.7 MB/s eta 0:00:00\n",
+      "Downloading pillow-11.0.0-cp312-cp312-win_amd64.whl (2.6 MB)\n",
+      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 0.8/2.6 MB 4.2 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 1.6/2.6 MB 3.8 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 2.1/2.6 MB 3.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.6/2.6 MB 3.1 MB/s eta 0:00:00\n",
+      "Installing collected packages: pillow, numpy\n",
+      "Successfully installed numpy-2.1.2 pillow-11.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: C:\\Users\\krain\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
-   "source": [
-    "!pip install numpy pillow"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "dac568bd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T14:07:15.378387Z",
+     "start_time": "2024-10-29T14:07:14.849351Z"
+    }
+   },
    "source": [
     "import os\n",
     "import numpy as np\n",
     "from PIL import Image"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -61,25 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "be02f857",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bleached Corals - Total Images: 484\n",
-      "Healthy Corals - Total Images: 438\n",
-      "Bleached Corals - Average Width: 301.3347107438017, Average Height: 224.98760330578511\n",
-      "Bleached Corals - Minimum Width: 199, Maximum Width: 1024\n",
-      "Bleached Corals - Minimum Height: 134, Maximum Height: 1024\n",
-      "Healthy Corals - Average Width: 288.51826484018267, Average Height: 237.96118721461187\n",
-      "Healthy Corals - Minimum Width: 150, Maximum Width: 1024\n",
-      "Healthy Corals - Minimum Height: 169, Maximum Height: 768\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T14:07:18.214162Z",
+     "start_time": "2024-10-29T14:07:17.993050Z"
     }
-   ],
+   },
    "source": [
     "bleached_path = \"./data/bleached_corals\"\n",
     "healthy_path = \"./data/healthy_corals\"\n",
@@ -128,7 +154,24 @@
     "print(f\"Healthy Corals - Average Width: {healthy_avg_width}, Average Height: {healthy_avg_height}\")\n",
     "print(f\"Healthy Corals - Minimum Width: {healthy_min_width}, Maximum Width: {healthy_max_width}\")\n",
     "print(f\"Healthy Corals - Minimum Height: {healthy_min_height}, Maximum Height: {healthy_max_height}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bleached Corals - Total Images: 484\n",
+      "Healthy Corals - Total Images: 438\n",
+      "Bleached Corals - Average Width: 301.3347107438017, Average Height: 224.98760330578511\n",
+      "Bleached Corals - Minimum Width: 199, Maximum Width: 1024\n",
+      "Bleached Corals - Minimum Height: 134, Maximum Height: 1024\n",
+      "Healthy Corals - Average Width: 288.51826484018267, Average Height: 237.96118721461187\n",
+      "Healthy Corals - Minimum Width: 150, Maximum Width: 1024\n",
+      "Healthy Corals - Minimum Height: 169, Maximum Height: 768\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   }
  ],
  "metadata": {
