add classification models

--- a/Healthy-and-Bleached-Corals-Image-Classification.ipynb
+++ b/Healthy-and-Bleached-Corals-Image-Classification.ipynb
@@ -13,11 +13,12 @@
    "id": "459555bd",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Install dependencies"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "c9a029b8",
    "metadata": {
     "ExecuteTime": {
@@ -25,55 +26,48 @@
      "start_time": "2024-10-29T14:06:55.249116Z"
     }
    },
-   "source": [
-    "!pip install numpy pillow"
-   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting numpy\n",
-      "  Downloading numpy-2.1.2-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
-      "Collecting pillow\n",
-      "  Downloading pillow-11.0.0-cp312-cp312-win_amd64.whl.metadata (9.3 kB)\n",
-      "Downloading numpy-2.1.2-cp312-cp312-win_amd64.whl (12.6 MB)\n",
-      "   ---------------------------------------- 0.0/12.6 MB ? eta -:--:--\n",
-      "   ---- ----------------------------------- 1.3/12.6 MB 9.5 MB/s eta 0:00:02\n",
-      "   ------- -------------------------------- 2.4/12.6 MB 5.8 MB/s eta 0:00:02\n",
-      "   -------------- ------------------------- 4.5/12.6 MB 7.1 MB/s eta 0:00:02\n",
-      "   ------------------ --------------------- 5.8/12.6 MB 6.9 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 6.8/12.6 MB 7.0 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 8.4/12.6 MB 6.7 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 9.4/12.6 MB 6.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 10.7/12.6 MB 6.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 11.5/12.6 MB 6.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  12.3/12.6 MB 5.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 12.6/12.6 MB 5.7 MB/s eta 0:00:00\n",
-      "Downloading pillow-11.0.0-cp312-cp312-win_amd64.whl (2.6 MB)\n",
-      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
-      "   ------------ --------------------------- 0.8/2.6 MB 4.2 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 1.6/2.6 MB 3.8 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 2.1/2.6 MB 3.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.6/2.6 MB 3.1 MB/s eta 0:00:00\n",
-      "Installing collected packages: pillow, numpy\n",
-      "Successfully installed numpy-2.1.2 pillow-11.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: C:\\Users\\krain\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (2.1.2)\n",
+      "Requirement already satisfied: pillow in ./.venv/lib/python3.12/site-packages (11.0.0)\n",
+      "Requirement already satisfied: scikit-learn in ./.venv/lib/python3.12/site-packages (1.5.2)\n",
+      "Requirement already satisfied: seaborn in ./.venv/lib/python3.12/site-packages (0.13.2)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: pandas>=1.2 in ./.venv/lib/python3.12/site-packages (from seaborn) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in ./.venv/lib/python3.12/site-packages (from seaborn) (3.9.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.54.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.12/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.12/site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.12/site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n"
      ]
     }
    ],
-   "execution_count": 2
+   "source": [
+    "!pip install numpy pillow scikit-learn seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "045f6587",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "dac568bd",
    "metadata": {
     "ExecuteTime": {
@@ -81,13 +75,19 @@
      "start_time": "2024-10-29T14:07:14.849351Z"
     }
    },
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "from PIL import Image"
-   ],
-   "outputs": [],
-   "execution_count": 3
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +99,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "be02f857",
    "metadata": {
     "ExecuteTime": {
@@ -106,72 +107,183 @@
      "start_time": "2024-10-29T14:07:17.993050Z"
     }
    },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bleached_images' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Get all image paths\u001b[39;00m\n\u001b[1;32m      8\u001b[0m bleached_image_paths \u001b[38;5;241m=\u001b[39m get_image_paths(bleached_path)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBleached Corals - Total Images: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[43mbleached_images\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m healthy_image_paths \u001b[38;5;241m=\u001b[39m get_image_paths(healthy_path)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHealthy Corals - Total Images: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(healthy_images)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bleached_images' is not defined"
+     ]
+    }
+   ],
    "source": [
     "bleached_path = \"./data/bleached_corals\"\n",
     "healthy_path = \"./data/healthy_corals\"\n",
-    "\n",
-    "# Read all jpg files from the paths and give a overview of the data (count, size etc.)\n",
     "\n",
     "def get_image_paths(folder_path):\n",
     "    return [os.path.join(folder_path, f) for f in os.listdir(folder_path) if f.endswith('.jpg')]\n",
     "\n",
     "# Get all image paths\n",
-    "bleached_images = get_image_paths(bleached_path)\n",
-    "print(f\"Bleached Corals - Total Images: {len(bleached_images)}\")\n",
-    "healthy_images = get_image_paths(healthy_path)\n",
-    "print(f\"Healthy Corals - Total Images: {len(healthy_images)}\")\n",
+    "bleached_image_paths = get_image_paths(bleached_path)\n",
+    "print(f\"Bleached Corals - Total Images: {len(bleached_image_paths)}\")\n",
+    "healthy_image_paths = get_image_paths(healthy_path)\n",
+    "print(f\"Healthy Corals - Total Images: {len(healthy_image_paths)}\")\n",
     "\n",
-    "# Function to load images and compute basic statistics\n",
     "def analyze_images(image_paths):\n",
     "    dimensions = []\n",
     "    for img_path in image_paths:\n",
     "        with Image.open(img_path) as img:\n",
     "            dimensions.append(img.size)  # (width, height)\n",
     "    \n",
-    "    # Convert to numpy array for easier analysis\n",
     "    dimensions = np.array(dimensions)\n",
     "    \n",
-    "    # Calculate average width and height\n",
     "    avg_width = np.mean(dimensions[:, 0])\n",
-    "    avg_height = np.mean(dimensions[:, 1])\n",
-    "\n",
-    "    # Calculate the minimum and maximum width and height\n",
     "    min_width = np.min(dimensions[:, 0])\n",
     "    max_width = np.max(dimensions[:, 0])\n",
+    "    avg_height = np.mean(dimensions[:, 1])\n",
     "    min_height = np.min(dimensions[:, 1])\n",
     "    max_height = np.max(dimensions[:, 1])\n",
     "    \n",
     "    return avg_width, min_width, max_width, avg_height, min_height, max_height, dimensions\n",
     "\n",
     "# Analyze bleached coral images\n",
-    "bleached_avg_width, bleached_min_width, bleached_max_width, bleached_avg_height, bleached_min_height, bleached_max_height, bleached_dimensions = analyze_images(bleached_images)\n",
+    "bleached_avg_width, bleached_min_width, bleached_max_width, bleached_avg_height, bleached_min_height, bleached_max_height, bleached_dimensions = analyze_images(bleached_image_paths)\n",
     "print(f\"Bleached Corals - Average Width: {bleached_avg_width}, Average Height: {bleached_avg_height}\")\n",
     "print(f\"Bleached Corals - Minimum Width: {bleached_min_width}, Maximum Width: {bleached_max_width}\")\n",
     "print(f\"Bleached Corals - Minimum Height: {bleached_min_height}, Maximum Height: {bleached_max_height}\")\n",
     "\n",
     "# Analyze healthy coral images\n",
-    "healthy_avg_width, healthy_min_width, healthy_max_width, healthy_avg_height, healthy_min_height, healthy_max_height, healthy_dimensions = analyze_images(healthy_images)\n",
+    "healthy_avg_width, healthy_min_width, healthy_max_width, healthy_avg_height, healthy_min_height, healthy_max_height, healthy_dimensions = analyze_images(healthy_image_paths)\n",
     "print(f\"Healthy Corals - Average Width: {healthy_avg_width}, Average Height: {healthy_avg_height}\")\n",
     "print(f\"Healthy Corals - Minimum Width: {healthy_min_width}, Maximum Width: {healthy_max_width}\")\n",
     "print(f\"Healthy Corals - Minimum Height: {healthy_min_height}, Maximum Height: {healthy_max_height}\")"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ef6ebe",
+   "metadata": {},
+   "source": [
+    "## Load and Resize Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "794f1a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_and_resize_images(image_paths, size=(64, 64)):\n",
+    "    images = []\n",
+    "    for img_path in image_paths:\n",
+    "        with Image.open(img_path) as img:\n",
+    "            img = img.resize(size)\n",
+    "            images.append(np.array(img).flatten())  # Flatten the image into a 1D array\n",
+    "    return np.array(images)\n",
+    "\n",
+    "bleached_images = load_and_resize_images(bleached_image_paths)\n",
+    "healthy_images = load_and_resize_images(healthy_image_paths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64548ea1",
+   "metadata": {},
+   "source": [
+    "## Labeling the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d364fac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create labels for the images\n",
+    "bleached_labels = ['bleached'] * len(bleached_images)\n",
+    "healthy_labels = ['healthy'] * len(healthy_images)\n",
+    "\n",
+    "# Combine the data and labels\n",
+    "data = np.vstack((bleached_images, healthy_images))\n",
+    "labels = np.array(bleached_labels + healthy_labels)\n",
+    "\n",
+    "# Encode the labels to numerical values\n",
+    "label_encoder = LabelEncoder()\n",
+    "labels_encoded = label_encoder.fit_transform(labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9b3bd4",
+   "metadata": {},
+   "source": [
+    "## Split in training and testing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "107b0f50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(data, labels_encoded, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80ef7c0f",
+   "metadata": {},
+   "source": [
+    "## Train a classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5454810e",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bleached Corals - Total Images: 484\n",
-      "Healthy Corals - Total Images: 438\n",
-      "Bleached Corals - Average Width: 301.3347107438017, Average Height: 224.98760330578511\n",
-      "Bleached Corals - Minimum Width: 199, Maximum Width: 1024\n",
-      "Bleached Corals - Minimum Height: 134, Maximum Height: 1024\n",
-      "Healthy Corals - Average Width: 288.51826484018267, Average Height: 237.96118721461187\n",
-      "Healthy Corals - Minimum Width: 150, Maximum Width: 1024\n",
-      "Healthy Corals - Minimum Height: 169, Maximum Height: 768\n"
+      "Accuracy: 0.7328519855595668\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    bleached       0.72      0.85      0.78       154\n",
+      "     healthy       0.76      0.59      0.66       123\n",
+      "\n",
+      "    accuracy                           0.73       277\n",
+      "   macro avg       0.74      0.72      0.72       277\n",
+      "weighted avg       0.74      0.73      0.73       277\n",
+      "\n"
      ]
     }
    ],
-   "execution_count": 4
+   "source": [
+    "\n",
+    "# classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "classifier = KNeighborsClassifier(n_neighbors=5)\n",
+    "# classifier = DecisionTreeClassifier(max_depth=20)\n",
+    "classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))"
+   ]
   }
  ],
  "metadata": {
