--- a/Healthy-and-Bleached-Corals-Image-Classification.ipynb
+++ b/Healthy-and-Bleached-Corals-Image-Classification.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "be02f857",
    "metadata": {
     "ExecuteTime": {
@@ -109,14 +109,17 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'bleached_images' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Get all image paths\u001b[39;00m\n\u001b[1;32m      8\u001b[0m bleached_image_paths \u001b[38;5;241m=\u001b[39m get_image_paths(bleached_path)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBleached Corals - Total Images: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[43mbleached_images\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m healthy_image_paths \u001b[38;5;241m=\u001b[39m get_image_paths(healthy_path)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHealthy Corals - Total Images: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(healthy_images)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bleached_images' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bleached Corals - Total Images: 484\n",
+      "Healthy Corals - Total Images: 438\n",
+      "Bleached Corals - Average Width: 301.3347107438017, Average Height: 224.98760330578511\n",
+      "Bleached Corals - Minimum Width: 199, Maximum Width: 1024\n",
+      "Bleached Corals - Minimum Height: 134, Maximum Height: 1024\n",
+      "Healthy Corals - Average Width: 288.51826484018267, Average Height: 237.96118721461187\n",
+      "Healthy Corals - Minimum Width: 150, Maximum Width: 1024\n",
+      "Healthy Corals - Minimum Height: 169, Maximum Height: 768\n"
      ]
     }
    ],
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "794f1a3c",
    "metadata": {},
    "outputs": [],
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "d364fac3",
    "metadata": {},
    "outputs": [],
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "107b0f50",
    "metadata": {},
    "outputs": [],
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "5454810e",
    "metadata": {},
    "outputs": [
