change num_epochs, lr and batch size vgg16

--- a/VGG16-BN-Corals-Image-Classification.ipynb
+++ b/VGG16-BN-Corals-Image-Classification.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.224813Z",
-     "start_time": "2024-11-24T14:05:55.359885Z"
+     "end_time": "2024-11-24T15:28:59.886991Z",
+     "start_time": "2024-11-24T15:28:57.964190Z"
     }
    },
    "source": [
@@ -26,23 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.5.1)"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: C:\\Users\\krain\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "Requirement already satisfied: torch in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.5.1)\n",
       "Requirement already satisfied: torchvision in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.20.1)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.5.2)\n",
       "Requirement already satisfied: cnn_finetune in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.6.0)\n",
@@ -65,15 +49,24 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jinja2->torch) (3.0.2)\n",
       "Requirement already satisfied: colorama in c:\\users\\krain\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm->cnn_finetune) (0.4.6)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: C:\\Users\\krain\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.432079Z",
-     "start_time": "2024-11-24T14:06:01.428551Z"
+     "end_time": "2024-11-24T15:29:10.833669Z",
+     "start_time": "2024-11-24T15:29:00.079447Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +85,13 @@
    ],
    "id": "92dfa503dd2c2bda",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.504493Z",
-     "start_time": "2024-11-24T14:06:01.460346Z"
+     "end_time": "2024-11-24T15:29:11.404963Z",
+     "start_time": "2024-11-24T15:29:11.365528Z"
     }
    },
    "cell_type": "code",
@@ -131,13 +124,13 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.531136Z",
-     "start_time": "2024-11-24T14:06:01.526645Z"
+     "end_time": "2024-11-24T15:29:11.450280Z",
+     "start_time": "2024-11-24T15:29:11.446328Z"
     }
    },
    "cell_type": "code",
@@ -152,13 +145,13 @@
    ],
    "id": "ae15c5118e51aa3f",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.576675Z",
-     "start_time": "2024-11-24T14:06:01.572205Z"
+     "end_time": "2024-11-24T15:29:11.478316Z",
+     "start_time": "2024-11-24T15:29:11.474317Z"
     }
    },
    "cell_type": "code",
@@ -183,13 +176,13 @@
    ],
    "id": "b0487498b0415522",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.588800Z",
-     "start_time": "2024-11-24T14:06:01.583268Z"
+     "end_time": "2024-11-24T15:29:11.496602Z",
+     "start_time": "2024-11-24T15:29:11.492498Z"
     }
    },
    "cell_type": "code",
@@ -202,32 +195,32 @@
    ],
    "id": "abbf027ecba94307",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:01.613874Z",
-     "start_time": "2024-11-24T14:06:01.608779Z"
+     "end_time": "2024-11-24T15:29:11.509979Z",
+     "start_time": "2024-11-24T15:29:11.506155Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# create Dataloader for each Dataset\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=16, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=16, shuffle=False)"
    ],
    "id": "ddab0b8732e849bb",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:02.839664Z",
-     "start_time": "2024-11-24T14:06:01.636553Z"
+     "end_time": "2024-11-24T15:29:12.630383Z",
+     "start_time": "2024-11-24T15:29:11.520745Z"
     }
    },
    "cell_type": "code",
@@ -235,10 +228,7 @@
     "# create model and adapt it to coral Dataset\n",
     "\n",
     "model = models.vgg16_bn(pretrained=True)\n",
-    "model.classifier[6] = nn.Linear(model.classifier[6].in_features, 2)\n",
-    "\n",
-    "for param in model.features.parameters():\n",
-    "    param.requires_grad = False"
+    "model.classifier[6] = nn.Linear(model.classifier[6].in_features, 2)"
    ],
    "id": "907134c601ff7254",
    "outputs": [
@@ -253,13 +243,13 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:02.866820Z",
-     "start_time": "2024-11-24T14:06:02.860652Z"
+     "end_time": "2024-11-24T15:29:12.646468Z",
+     "start_time": "2024-11-24T15:29:12.639950Z"
     }
    },
    "cell_type": "code",
@@ -269,13 +259,13 @@
    ],
    "id": "21ec5082e45c0f13",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:06:02.891758Z",
-     "start_time": "2024-11-24T14:06:02.884665Z"
+     "end_time": "2024-11-24T15:29:12.676154Z",
+     "start_time": "2024-11-24T15:29:12.672805Z"
     }
    },
    "cell_type": "code",
@@ -283,24 +273,26 @@
     "# define loss function and optimizer\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(model.parameters(), lr=0.0001)"
    ],
    "id": "651745591bb9908e",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 10
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-11-24T14:25:14.031372Z",
-     "start_time": "2024-11-24T14:06:02.911328Z"
+     "start_time": "2024-11-24T15:29:12.690211Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# train model\n",
     "\n",
-    "num_epochs = 10\n",
+    "num_epochs = 30\n",
     "train_losses = []\n",
     "val_accuracies = []\n",
     "\n",
@@ -345,36 +337,8 @@
     "print('Training completed')\n"
    ],
    "id": "c1d966f20d94676d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/10], Loss: 1.0309\n",
-      "Validation Accuracy: 69.57%\n",
-      "Epoch [2/10], Loss: 0.3952\n",
-      "Validation Accuracy: 78.26%\n",
-      "Epoch [3/10], Loss: 0.1838\n",
-      "Validation Accuracy: 73.91%\n",
-      "Epoch [4/10], Loss: 0.1703\n",
-      "Validation Accuracy: 67.39%\n",
-      "Epoch [5/10], Loss: 0.1408\n",
-      "Validation Accuracy: 67.39%\n",
-      "Epoch [6/10], Loss: 0.2290\n",
-      "Validation Accuracy: 76.09%\n",
-      "Epoch [7/10], Loss: 0.2084\n",
-      "Validation Accuracy: 77.17%\n",
-      "Epoch [8/10], Loss: 0.1604\n",
-      "Validation Accuracy: 75.00%\n",
-      "Epoch [9/10], Loss: 0.0918\n",
-      "Validation Accuracy: 69.57%\n",
-      "Epoch [10/10], Loss: 0.2642\n",
-      "Validation Accuracy: 75.00%\n",
-      "Training abgeschlossen\n"
-     ]
-    }
-   ],
-   "execution_count": 48
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
