--- a/VGG16-BN-Corals-Image-Classification.ipynb
+++ b/VGG16-BN-Corals-Image-Classification.ipynb
@@ -720,6 +720,19 @@
     "| 3       |                          |                            |                               |                         |\n",
     "| 4       |                          |                            |                               |                         |\n",
     "\n",
+    "\n",
+    "Final Results:\n",
+    "   run  batch_size      lr     augmentation  epochs  final_val_loss  \\\n",
+    "0    1          32  0.0010          default      30        0.867384   \n",
+    "1    2          64  0.0001  horizontal_flip      50        1.480133   \n",
+    "2    3          16  0.0005         rotation      30        0.683016   \n",
+    "3    4          48  0.0002     color_jitter      40        1.222641   \n",
+    "\n",
+    "   final_val_accuracy  \n",
+    "0           75.000000  \n",
+    "1           70.652174  \n",
+    "2           76.086957  \n",
+    "3           72.826087\n",
     "---\n",
     "\n",
     "### **Conclusion**\n",
